# poetry2nix

./: fetch-pypi.sh  lib.nix  mk-poetry-dep.nix
tests/: default.nix
tests/alternative-sources/: pyproject.toml
