[tool.poetry]
name = "alternative-sources"
version = "0.1.0"
description = "poetry2nix test"
authors = ["Your Name <you@example.com>"]

[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/25574279/packages/pypi/simple/"

[tool.poetry.dependencies]
python = "^3.7"
logfmt-logger = "^0.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
